--- a/css/styles.css
+++ b/css/styles.css
@@ -69,14 +69,14 @@ ul {
 a {
   text-decoration: none;
 }
-img {
-  width: 100%;
-  display: block;
-}
-/* img:not(.nav-logo) {
+/* img {
   width: 100%;
   display: block;
 } */
+img:not(.nav-logo) {
+  width: 100%;
+  display: block;
+}
 
 h1,
 h2,
@@ -147,16 +147,193 @@ p {
   background: var(--clr-primary-8);
 }
 
+.section {
+  padding: 5rem 0;
+}
+.section-title {
+  text-align: center;
+  margin-bottom: 4rem;
+}
+.section-title h2 {
+  text-transform: uppercase;
+}
+.section-title span {
+  color: var(--clr-primary-5);
+}
+
+.secrion-title {
+  width: 90vw;
+}
+
+.section-center {
+  width: 90vw;
+  margin: 0 auto;
+  max-width: 1170px;
+}
+
+@media screen and (min-width: 992px) {
+  .section-center {
+    width: 95vw;
+  }
+}
+
 /*
 =============== 
 Navbar
 ===============
 */
+.navbar {
+  background-color: white;
+  width: 100%;
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 2;
+}
+
+.nav-center {
+  width: 100%;
+  max-width: 1170px;
+  margin: 0 auto;
+}
+
+.nav-header {
+  display: flex;
+  justify-content: space-between;
+  margin: 1rem 1rem;
+  align-items: center;
+}
+
+.nav-toggle{
+  color: var(--clr-primary-5);
+  border: none;
+  background: transparent;
+  transition: var(--transition);
+  font-size: 2.2rem;
+  cursor: pointer;
+}
+
+.nav-toggle:hover{
+  transform: scale(1.2);
+}
+
+.nav-link {
+  display: block;
+  color: var(--clr-grey-5);
+  text-transform: capitalize;
+  line-height: 2rem;
+   letter-spacing: 0.3rem;
+   padding-left: 1rem;
+   transition: var(--transition);
+   margin-bottom: 1rem;
+}
+
+.nav-link:hover{
+  color: white;
+  background-color: var(--clr-primary-5);
+}
+
+.nav-links{
+  height: 0;
+transition: var(--transition);
+overflow: hidden;
+}
+
+.show-links{
+  height: 15rem;
+}
+
+.nav-icons {
+  display: none;
+}
+
+@media screen and (min-width:992px) {
+  .nav-toggle{
+    display: none;
+  }
+.nav-center{ 
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav-links{
+  height: auto;
+  display: flex ;
+  align-items: center;
+  margin-left: 0.3rem;
+}
+.nav-link{
+  border-radius: 1rem;
+  text-align: center;
+  padding-left:0 ;
+  margin: 0 1rem;
+  padding: 0.2rem 0.2rem;
+  display: inline-block;
+}
+
+.nav-icons {
+  display: flex;
+  align-items: center;
+}
+.nav-icon {
+  margin: 0 0.5rem;
+  color: var(--clr-primary-3);
+}
+.nav-icon:hover {
+  color: var(--clr-primary-6);
+}
+
+}
+
 /*
 =============== 
 Hero
 ===============
 */
+
+.hero {
+  display: flex;
+  height: 100vh;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--clr-primary-5);
+}
+
+.hero-banner {
+  color: white;
+  text-align: center;
+  padding: 1rem;
+  line-height: 1rem;
+}
+
+.hero-banner p {
+  max-width: 300px;
+  margin: 1rem auto;
+  line-height: 1rem;
+}
+
+.hero-btn {
+  font-size: 1.25rem;
+  background-color: var(--clr-white);
+  color: var(--clr-primary-5);
+  transition: var(--transition);
+  padding: 1rem;
+  border-radius: 1rem;
+}
+
+.hero-btn:hover {
+  background-color: var(--clr-primary-5);
+  color: var(--clr-white);
+}
+
+@media screen and (min-width: 768px) {
+  .hero {
+    background: linear-gradient(rgba(44, 174, 186, 0.7), rgba(0, 0, 0, 0.5)),
+      url("../images//main.jpeg") center/cover no-repeat;
+  }
+}
+
 /*
 =============== 
 About
@@ -165,33 +342,332 @@ About
 /* section add to globals */
 /* title add to globals */
 /* section center add to globals */
+@media screen and (min-width: 992px) {
+  .about-center {
+    display: flex;
+    gap: 2rem;
+  }
+}
+
+.about-info {
+  align-self: center;
+}
+.about-img {
+  position: relative;
+  border-radius: 2rem;
+}
+.about-img::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  border: 1rem solid var(--clr-primary-5);
+  box-sizing: border-box;
+  position: absolute;
+  left: -3rem;
+  top: -3rem;
+  z-index: -1;
+  border-radius: 2rem;
+}
+.about-photo {
+  border-radius: 2rem;
+}
 
 /*
 =============== 
 Services
 ===============
 */
+.service {
+  text-align: center;
+  line-height: 1rem;
+}
+.service span {
+  color: var(--clr-primary-5);
+  font-size: 3rem;
+  padding: 1rem;
+  display: inline-block;
+}
+.service-text {
+  max-width: 10rem;
+  margin: 1rem auto;
+}
+@media screen and (min-width: 992px) {
+  .services-center {
+    display: flex;
+    margin: 0 auto;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .service {
+    display: flex;
+  }
+}
 
 /*
 =============== 
 Featured Tours
 ===============
 */
+.tour-card {
+  background-color: var(--clr-grey-9);
+  margin-bottom: 2rem;
+  transition: var(--transition);
+  box-shadow: var(--light-shadow);
+}
+
+.tour-card:hover {
+  transform: scale(1.05);
+  box-shadow: var(--dark-shadow);
+}
+
+.tour-img-container {
+  position: relative;
+}
+
+.tour-img {
+  height: 15rem;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.tour-date {
+  position: absolute;
+  bottom: 0;
+  right: 1rem;
+  background-color: var(--clr-primary-1);
+  color: white;
+  padding: 0.2rem;
+  border-radius: 1rem;
+  padding: 0.2rem 1rem;
+}
+
+.tour-info {
+  padding: 1.25rem 1.5rem;
+}
+
+.tour-footer {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.tour-footer p {
+  line-height: 0;
+  margin-bottom: 0;
+  text-transform: capitalize;
+  color: var(--clr-primary-5);
+}
+
+.tour-btn {
+  text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+  .featured-center {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  .tour-card {
+    flex: 0 0 48%;
+  }
+}
+@media screen and (min-width: 1000px) {
+  .tour-card {
+    flex: 0 0 32%;
+    justify-self: flex-start;
+  }
+}
 
 /*
 =============== 
 Contact
 ===============
 */
+.contact {
+  background: var(--clr-primary-5);
+}
 
+.contact-title {
+  color: var(--clr-white);
+}
+
+.contact-title p {
+  color: var(--clr-primary-8);
+}
+
+.contact-form {
+  display: flex;
+  max-width: 28rem;
+}
+
+.form-control {
+  flex: 1 1 auto;
+  color: var(--clr-grey-5);
+}
+
+.form-control,
+.btn-submit {
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  font-weight: 300;
+  letter-spacing: var(--spacing);
+  background: var(--clr-white);
+  text-transform: capitalize;
+  border: transparent;
+}
+
+.form-control::-webkit-input-placeholder {
+  color: inherit;
+}
+
+.form-control::-moz-placeholder {
+  color: inherit;
+}
+
+.form-control:-ms-input-placeholder {
+  color: inherit;
+}
+
+.form-control::-ms-input-placeholder {
+  color: inherit;
+}
+
+.form-control::placeholder {
+  color: inherit;
+}
+
+.btn-submit {
+  font-family: var(--ff-primary);
+  margin-left: 0.5rem;
+  background: var(--clr-primary-8);
+  color: var(--clr-primary-1);
+  cursor: pointer;
+  transition: var(--transition);
+}
+
+.btn-submit:hover {
+  background: var(--clr-primary-1);
+  color: var(--clr-primary-5);
+}
+
+@media screen and (min-width: 992px) {
+  .contact-center {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  .contact-form {
+    align-self: flex-start;
+    flex: 1 1 auto;
+    max-width: 100%;
+    padding-left: 2rem;
+  }
+}
 /*
 =============== 
 Gallery
 ===============
 */
+.gallery-img-container {
+  position: relative;
+  background: var(--clr-primary-5);
+}
+
+.gallery-icon {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  font-size: 2rem;
+  transform: translate(-50%, -50%);
+  color: var(--clr-white);
+  opacity: 0;
+  cursor: pointer;
+  transition: var(--transition);
+}
+
+.gallery-img {
+  height: 17rem;
+  -o-object-fit: cover;
+     object-fit: cover;
+  transition: var(--transition);
+}
+
+.gallery-img-container:hover .gallery-img {
+  opacity: 0.5;
+}
+
+.gallery-img-container:hover .gallery-icon {
+  opacity: 1;
+}
+
+@media screen and (min-width: 768px) {
+  .gallery-center {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .gallery-img-container {
+    flex: 0 0 50%;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .gallery-img-container {
+    flex: 0 0 25%;
+  }
+}
 
 /*
 =============== 
 Footer
 ===============
 */
+.footer {
+  background: var(--clr-grey-1);
+  text-align: center;
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+.footer-links,
+.footer-icons {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 1.5rem;
+  flex-wrap: wrap;
+}
+
+.footer-link {
+  color: var(--clr-white);
+  text-transform: capitalize;
+  font-size: 1rem;
+  margin-right: 1rem;
+  letter-spacing: var(--spacing);
+  transition: var(--transition);
+}
+
+.footer-link:hover {
+  color: var(--clr-primary-5);
+}
+
+.footer-icon {
+  font-size: 2rem;
+  margin-right: 1rem;
+  color: var(--clr-primary-8);
+  transition: var(--transition);
+}
+
+.footer-icon:hover {
+  color: var(--clr-primary-5);
+}
+
+.copyright {
+  text-transform: capitalize;
+  letter-spacing: var(--spacing);
+  color: var(--clr-white);
+}
